# recsys-2026

./: .gitignore  README.md  STRATEGY.md  VERSIONS.md  analyze_hits.py  eval_devset.py  eval_inference.py  pyproject.toml  run_bm25cf_blind.sh  run_inference_blind.py  run_inference_blind_bm25cf.py  run_inference_devset.py  run_rerank_cli.py  run_v10_patch.py  run_v11_coherence.py  run_v12_user_first.py  run_v13_explanation_floor.py  run_v9_cli.py  score_judge_proxy.py  test_batch_rerank_parallel.py
config/: echo_bm25_cf_blind_a.yaml  echo_bm25_dualqr2_sonnet_llm10v2_k100_devset.yaml  echo_bm25_dualqr_llm10_k100_devset.yaml  echo_bm25_dualqr_llm10v2_k100_devset.yaml  echo_bm25_dualqr_sonnet_llm10v2_k100_devset.yaml  echo_bm25_dualqr_sonnet_llm20v2_k100_devset.yaml  echo_bm25_dualqr_sonnet_llm20v2_k200_devset.yaml  echo_bm25_dualqr_sonnet_llm20v3_k100_devset.yaml  echo_bm25_enriched_devset.yaml  echo_bm25_llm_blind_a.yaml  echo_bm25_nlq_llm10_k100_devset.yaml  echo_bm25_nlq_llm10_k150_devset.yaml  echo_bm25_nlq_llm10v21_k100_devset.yaml  echo_bm25_nlq_llm10v22_k100_devset.yaml  echo_bm25_nlq_llm10v2_k100_devset.yaml  echo_bm25_nlq_llm15_k100_devset.yaml  echo_bm25_nlq_llm20_k100_devset.yaml  echo_bm25_nlq_llm20v22_k100_devset.yaml  echo_bm25_nlq_llm20v2_k100_devset.yaml  echo_bm25_nlq_qhint_llm10_k100_devset.yaml  echo_bm25_nlq_qhint_llm10_k200_devset.yaml  echo_bm25_nlq_qhint_llm20_k100_devset.yaml  echo_bm25_nlq_qhint_llm20_k200_devset.yaml  echo_bm25_nlq_sonnet_llm10v2_k100_devset.yaml  echo_bm25_nlq_sonnet_llm10v2_k200_devset.yaml  echo_bm25_qr_llm10_devset.yaml  (+31 more)
(+28 files in other folders)
