[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcrs"
version = "0.2.0"
description = "Echo's Enhanced Music Conversational Recommender System — RecSys 2026"
requires-python = ">=3.14"
dependencies = [
    "bm25s>=0.2.13",
    "datasets>=3.1.0",
    "omegaconf>=2.3.0",
    "psutil>=7.2.2",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.46.3",
    "sentence-transformers>=3.0.0",
    "anthropic>=0.49.0",
    "tqdm>=4.66.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "faiss-cpu>=1.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcrs*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "jupyter>=1.0.0",
]
